clusters/production/kalyani-demo/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: echo
  namespace: kalyani
spec:
  selector:
    app: echo
  ports:
  - port: 80
    targetPort: 8080
