clusters/production/kalyani-demo/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: echo
  namespace: kalyani
spec:
  ingressClassName: cloudflare-tunnel
  rules:
  - host: kalyani.sfslab.cloud
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: echo
            port:
              number: 80
